# MancalaAI

./: .gitignore  Mancala.py  MancalaAI.py  README.md  hospital.ipynb  project.ipynb  pyproject.toml  requirements.txt
experiments/: benchmark.py
src/mancala_ai/: __init__.py  ai.py  cli.py  game.py
tests/: conftest.py  test_ai.py  test_game.py
